Revise CreateStartScripts tasks